# artool

./: .gitignore
ART/doc/doxygen/: generateDOC.sh
ART/doc/doxygen/templates/: ARTLayout.xml  mnu_act.html  mnu_api_func.html  mnu_guide_model.html
ART/examples/Delphi/: ARTDefinitions.pas
ART/examples/Delphi/Console/: ShowCapabilities.dpr  SimpleImpedance.dpr
ART/examples/Delphi/GUI/: ACAbout.dfm  ACCommon.pas  ACGraph.pas  ACProgressDlg.dfm  ACProgressDlg.pas  ACSimProp.dfm  acousticCircuit.dpr  graphImpProject.dpr  graphImpUnit1.pas
ART/include/art/: ART.h  ARTFreqSimulator.h  ARTItimeModule.h  ARTTimeSimulator.h  ARTcell.h  ARTcircuit.h  ARTdataContainer.h  ARTdataProp.h  ARTelement.h  ARTlink.h  ARTlistProp.h  ARTmethod.h  ARTmodel.h  ARTmodelInterface.h  ARTmodelinterface.h  ARTobject.h  ARTproperty.h  ARTprototype.h  ARTsimulator.h  ARTtimeModule.h  ARTwaveObject.h  AcousticResearchTool.h  BesselSection.h  BoreJumpSection.h  Branch.h  CalculationMethod.h  Cell.h  ConeBendSection.h  ConeSection.h  CylinderBendSection.h  CylinderSection.h  DataContainer.h  DataProp.h  Element.h  FreqSimulator.h  Functionoid.h  Horn.h  HornElement.h  Interface.h  MMSimul.h  (+10 more)
ART/include/muParser/: mpARTValue.h  mpFuncCmplx.h  mpICallback.h  mpIOprt.h  mpTest.h  mpVariable.h
ART/source/art/: ARTFreqSimulator.cpp  ARTItimeModule.cpp  ARTSimulator.cpp  ARTTimeSimulator.cpp  ARTcircuit.cpp  ARTcli.clp  ARTdataContainer.cpp  ARTelement.cpp  ARTerror.cpp  ARTfunctionoid.cpp  ARTlib.cpp  ARTobject.cpp  ARTsimulator.cpp  ARTtimeModule.cpp  AcousticResearchTool.cpp  BesselSection.cpp  BoreJumpSection.cpp  Circuit.cpp  ConeBendSection.cpp  ConeSection.cpp  CylinderSection.cpp  DataContainer.cpp  Element.cpp  HornElement.cpp  ITimeModule.cpp  ModelInterface.cpp  Simulator.cpp  TerminationElement.cpp  TimeModule.cpp  TimeSimulator.cpp  WindInstrument.cpp  art.cpp  runrb.cpp  timePrototypes.cpp
ART/source/fortran/: cg.c  corth.c  pythag.c
ART/source/ga/: GA1DArrayGenome.cpp
ART/source/muParser/: mpARTValue.cpp  mpError.cpp  mpFuncCommon.cpp  mpICallback.cpp  mpPackageCmplx.cpp  mpRPN.cpp  mpValueCache.cpp
ART/source/unknown_files/: MMSimul.dep  VCsetup.bat  legquadrature_test.cpp
ARTTest/include/ARTTest/: ARTVariantTests.h  integrationTests.h  test_main.h
ARTTest/include/gmock/: gmock-matchers.h
ARTTest/source/ARTTest/: ARTVariantTests.cpp  integrationTests.cpp
ARTTest/source/gmock/: gmock-matchers.cc
cmake/: CMakeLists.txt  tokens.lds
doc/doxygen/: doc_pdf.conf
doc/doxygen-test/: doc_html.conf
doc/doxygen-test/templates/: footer.html  footer_leer.html  hdr.html  header.html  mnu_index.html  stylesheet.css
doc/doxygen/templates/: mnu_guide_wave.html
examples/: artsimdefs.py  clarinet.py  conical_bore.py  deq.py  exp_horn_norm_rf.txt  exponential_horn.py  lip_model.py  test_time_py.py  testlibart.c  testlibart.cpp
examples/Python/TimeDomain/ExponentialHorn/: exponential_horn.py
examples/Python/TimeDomain/FibonacciNumbers/: test_time_py.py
examples/Python/TimeDomain/LipModel/: trumpet_rf.txt
include/art/: ART.h  ARTdataContainer.h  ARTfunctionoid.h  ARTlink.h  ARTmodel.h  ARTmodelinterface.h  ARTsimulator.h  ARTtimeModule.h  ARTwaveObject.h  HornElement.h  ImpedanceCurve.h  Interface.h  MMSimul.h  SimpleMatrix.h  common_vs6.hpp  error.hpp  inline.hpp  matrix.h  rosenbrock.h  timePrototypes.h
include/gtest/: gtest-printers.h
include/muParser/: mpARTValue.h  mpBuffer.h  mpIToken.h  mpIfThenElse.h  mpOverload.h  mpPackageCmplx.h  mpPackageNonCmplx.h  mpPackageUnit.h  mpTypes.h  mpValue.h
ms-visual-studio-10/: ART.sln  ART.vcxproj  ART.vcxproj.filters
ms-visual-studio-6/: ART.dsp  GALib.dsp  artsim.dsp  fortran.dsp
msvc/ms-visual-studio-6/: ART.dsw
msvc/ms-visual-studio-6/unknown_files/: ARTDLL.mak  Art.dsc
source/art/: ARTdataContainer.cpp  ARTerror.cpp  ARTfunctionoid.cpp  ARTlink.cpp  ARTsimulator.cpp  ARTtimeModule.cpp  HornElement.cpp  Interface.cpp  WindInstrument.cpp  art.cpp  runga.cpp  test_main.cpp  timePrototypes.cpp
source/fortran/: cbabk2.c  cbal.c  comqr.c  csroot.c
source/gmock/: gmock-all.cc
source/muParser/: mpARTValue.cpp  mpFuncCommon.cpp  mpIOprt.cpp  mpIValue.cpp  mpOprtBinAssign.cpp  mpOprtCmplx.cpp  mpPackageCommon.cpp  mpPackageUnit.cpp  mpParser.cpp  mpParserBase.cpp  mpRPN.cpp  mpTokenReader.cpp  mpValReader.cpp  mpValue.cpp
source/unknown_files/: ART.def  Art.dsc  MMSimul.mak  StdTrumpet.txt
trunk/: .gitignore
trunk/ART/examples/Python/: artsimdefs.py
trunk/cmake/: CMakeLists.txt
trunk/doc/doxygen-test/: doc_html.conf  generateHTML.sh
trunk/examples/: Makefile  artsimdefs.py  clarinet.py  clarinet_rf.txt  conical_bore.py  exponential_horn.py  lip_model.py  square_function.py  test_py.py  test_time_py.py
trunk/examples/Python/: artsimdefs.py
trunk/include/art/: ART.h  ARTdataContainer.h  ARTerror.h  ARTfunctionoid.h  ARTlink.h  ARTmodel.h  ARTmodelinterface.h  ARTsimulator.h  ARTtimeModule.h  HornElement.h  ImpedanceCurve.h  Interface.h  LeGquadrature.h  WindInstrument.h  inline.hpp  timePrototypes.h
trunk/include/ga/: GAScaling.h
trunk/include/muParser/: memory.h  mpBuffer.h  mpDefines.h  mpError.h  mpFwdDecl.h  mpIValue.h  mpOprtBinCommon.h  mpPackageCommon.h  mpPackageStr.h  mpRPN.h  mpTokenReader.h  mpTypes.h
trunk/ms-visual-studio-10/: ART.sln  ART.vcxproj  ART.vcxproj.filters
trunk/ms-visual-studio-6/: ART.dsp  ART.dsw  GALib.dsp  artsim.dsp  fortran.dsp
trunk/msvc/ms-visual-studio-6/: ART.dsp
trunk/source/: ScriptDoku.txt
trunk/source/art/: ART.cpp  ARTdataContainer.cpp  ARTfunctionoid.cpp  ARTlink.cpp  ARTsimulator.cpp  ARTtimeModule.cpp  Interface.cpp  SimpleMatrix.cpp  WindInstrument.cpp  art.cpp  rosenbrock.cpp  test_main.cpp  timePrototypes.cpp
trunk/source/fortran/: cdiv.c  cg.f
trunk/source/muParser/: mpARTValue.cpp  mpFuncCommon.cpp  mpFuncNonCmplx.cpp  mpOprtBinCommon.cpp  mpOprtCmplx.cpp  mpOprtNonCmplx.cpp  mpPackageCommon.cpp  mpParserBase.cpp  mpTest.cpp  mpValue.cpp  mpVariable.cpp
trunk/source/unknown_files/: ART.dep  MMSimul.def  MMSimulDLL.mak  main.dep
(+171 files in other folders)
